--- a/SwiftyProteins/Podfile
+++ b/SwiftyProteins/Podfile
@@ -3,7 +3,7 @@
 
 target 'SwiftyProteins' do
   # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
+  # use_frameworks!
 
   # Pods for SwiftyCompanions
   pod 'Alamofire'
